# Effect-Engine

./: Cargo.toml  IDEAS.md  LICENSE  README.md
.github/workflows/: rust.yml
assets/: README.md
assets/shaders/: shader.wgsl
effect-audio/: Cargo.toml
effect-audio/src/: mixer.rs  mod.rs  spatial.rs
effect-core/: Cargo.toml
effect-core/src/: engine.rs  id.rs  lib.rs  mod.rs
effect-core/src/camera/: camera2d.rs  mod.rs
effect-core/src/entity/: entity.rs
effect-core/src/layer/: layer.rs
effect-core/src/misc/: fullscreen.rs  mod.rs  window_info.rs
effect-core/src/primitives/: mod.rs  vector.rs  vertex.rs
effect-core/src/raw/: entityraw.rs  mod.rs
effect-core/src/texture/: mod.rs  texture_atlas2d.rs
effect-core/src/transform/: mod.rs  transform.rs
effect-core/src/util/: effect_error.rs  mod.rs
effect-engine/: Cargo.toml  README.md
effect-engine/src/: lib.rs  main_loop.rs
effect-engine/src/app/: app_2d.rs  app_3d.rs  mod.rs
effect-events/: Cargo.toml
effect-events/src/: main_loop.rs
effect-events/src/input/: camera2d.rs  mod.rs
effect-examples/: Cargo.toml
effect-examples/src/: main.rs
effect-gui/: Cargo.toml
effect-network/: Cargo.toml
effect-util/: Cargo.toml
effect-util/src/: effect_error.rs
effect-vulkan/: Cargo.toml
effect-wgpu/: Cargo.toml
effect-wgpu/src/: lib.rs
effect-wgpu/src/allocator/: mod.rs
effect-wgpu/src/app/: effect2d.rs  effect3d.rs  mod.rs
effect-wgpu/src/background/: background2d.rs  mod.rs
effect-wgpu/src/camera/: mod.rs
effect-wgpu/src/engine/: engine2d.rs  mod.rs
effect-wgpu/src/engine/builders/: atlas_2d_builder.rs  engine2d_builder.rs  mod.rs  texture_data_builder.rs  web_atlas_2d_builder.rs
effect-wgpu/src/entity/: entity2d.rs  mod.rs
effect-wgpu/src/layer/: mod.rs
effect-wgpu/src/layouts/: mod.rs
effect-wgpu/src/texture/: mod.rs  texture2d.rs  texture_array.rs  texture_atlas.rs  texture_data.rs
effect-wgpu/src/window/: mod.rs
effect_audio/: Cargo.toml
effect_core/: Cargo.toml
effect_engine/: Cargo.toml
effect_events/: Cargo.toml
effect_examples/: Cargo.toml
src/: lib.rs  main.rs
src/engine/: engine.rs  mod.rs
src/engine/adts/: entity.rs  entity_group.rs  layer.rs  mod.rs
src/engine/camera/: camera.rs
src/engine/entity/: entity.rs  mod.rs  vertex_group.rs
src/engine/layer/: layer.rs
src/engine/primitives/: matrix.rs  vector.rs  vertex.rs
src/engine/texture/: background2d.rs  mod.rs  texture2d.rs  texture_atlas2d.rs  texture_pool.rs
src/engine/traits/: entity.rs  layer.rs  mod.rs
src/engine/transform/: transform.rs
src/engine/util/: effect_error.rs
src/event/: main_loop.rs  mod.rs
src/event/input/: context.rs
src/shaders/: shader.wgsl
src/sound/: mixer.rs  spatial.rs
src/util/: effect_error.rs  file_to_bytes.rs  mod.rs
