[workspace]
resolver = "2"
members = [
  "effect-examples",
  "effect-audio",
  "effect-events",
  "effect-engine",
  "effect-wgpu",
  "effect-gui", 
  "effect-vulkan",
]

[workspace.package]
name = "Effect 2"
version = "0.2.2-alpha"
edition = "2021"

[workspace.dependencies]
winit = { version = "0.29", features = ["rwh_05"]}
wgpu = "0.19"
pollster = "0.3.0"
raw-window-handle = "0.6.0"
bytemuck = { version = "1.14", features = [ "derive" ] }
anyhow = "1.0.75"
rand = "0.8.5"
rayon = "1.8.0"
glam = "0.25"
rodio = "0.17"
num = "0.4.1"
ash = "0.37"

[workspace.dependencies.effect-examples]
package = "effect-examples"
version = "0.2.2-alpha"
path = "./effect-examples"

[workspace.dependencies.effect-audio]
package = "effect-audio"
version = "0.2.2-alpha"
path = "./effect-audio"

[workspace.dependencies.effect-events]
package = "effect-events"
version = "0.2.2-alpha"
path = "./effect-events"

[workspace.dependencies.effect-engine]
package = "effect-engine"
version = "0.2.2-alpha"
path = "./effect-engine"

[workspace.dependencies.effect-gui]
package = "effect-gui"
version = "0.2.2-alpha"
path = "./effect-gui"

[workspace.dependencies.effect-wgpu]
package = "effect-wgpu"
version = "0.2.2-alpha"
path = "./effect-wgpu"

[workspace.dependencies.effect-vulkan]
package = "effect-vulkan"
version = "0.2.2-alpha"
path = "./effect-vulkan"

[workspace.dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
