[package]
name = "effect-audio"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
rodio.workspace = true
effect-util.workspace = true
effect-core.workspace = true
