[package]
name = "effect-core"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu.workspace = true
num.workspace = true
bytemuck.workspace = true
winit.workspace = true
anyhow.workspace = true
effect-util.workspace = true
