[package]
name = "effect-core"
version.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core components for the Effect Engine"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu.workspace = true
num.workspace = true
bytemuck.workspace = true
winit.workspace = true
anyhow.workspace = true
effect-util.workspace = true
effect-events.workspace = true
glam.workspace = true
