[package]
name = "effect-engine"
version.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Effect Engine for building video games"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
rand.workspace = true
rayon.workspace = true
glam.workspace = true
num.workspace = true
ash.workspace = true
rodio.workspace = true
effect-events.workspace = true
effect-audio.workspace = true
effect-vulkan.workspace = true
effect-gui.workspace = true
effect-util.workspace = true
