[package]
name = "effect-examples"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "effect-examples"
path = "src/main.rs"
test = false

[dependencies]
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
rand.workspace = true
rayon.workspace = true
glam.workspace = true
num.workspace = true
ash.workspace = true
rodio.workspace = true
effect-engine.workspace = true
