[package]
name = "effect-network"
version.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Networking stack for the Effect game engine"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
