[package]
name = "effect-util"
version.workspace = true
edition.workspace = true
license = "MIT"
descripton = "Utilities for the Effect Engine"
documentation = ":"
homepage = "https://github.com/XavierCS-dev/Effect-Engine"
repository = "https://github.com/XavierCS-dev/Effect-Engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
