[package]
name = "effect-util"
version.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
descripton = "Utilities for the Effect Engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
