[package]
name = "effect-wgpu"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
rayon.workspace = true
effect-util.workspace = true
image.workspace = true
effect-core.workspace = true
pollster.workspace = true
