[package]
name = "effect-wgpu"
version.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WGPU renderer for the Effect Engine"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
rayon.workspace = true
effect-util.workspace = true
image.workspace = true
effect-core.workspace = true
pollster.workspace = true
